--- a/DATA_AQUISITION/readme.me
+++ b/DATA_AQUISITION/readme.me
@@ -1,3 +1,4 @@
+# snoTEL-metSIM-SUMMA-workflow 
 #Snow Telemetry Data Collection Network (snoTEL) data
 
 You will first have to install R (https://www.r-project.org), programming platform, and the complimentary SNOTELR package (https://github.com/khufkens/snotelr). Paste the commands from the SNOTELR_COMMANDS.txt file into an R terminal. The first couple commands: 1) will activate the SNOTELR package and 2) set the directory that the snotel data files will be downloaded into. The rest of the commands download site specific data from each of the 800+ snoTEL sites. I would not recommend pasting all of the commands at one time. The file with the commands has separate headings for sates within the USA. I went through state by state copying and pasting, and the waiting until all of the data was downloaded. This downloaded information will be in a .csv files that have decimal points marked with a semicolon. To replace these semicolons with a period, use the REPLACE_CHAR.sh script. This python script uses the STATION_LIST file, which is a list of all the names of the snoTEL data files. This file is used to cycle through all the download files and replace the odd character.
